kubernetes/deployment_scc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: sitedjeya/scc:v1.0.2
        ports:
            - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
