kubernetes/service_poleit.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: pole-it
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
