kubernetes/service_redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 9443
      targetPort: 9443
  type: NodePort
