kubernetes/service_scc.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
spec:
  selector:
    app: website 
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
