kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poleit-ingress
spec:
  rules:
      - host: www.pole-it.la
        http:
          paths:
          - path: "/"
            backend:
              service:
                name: my-service
                port:
                  number: 80
            pathType: Prefix
